Fixed problems with dark mode

--- a/src/app/spotbie/spotbie-logged-in/my-friends/my-friends.component.scss
+++ b/src/app/spotbie/spotbie-logged-in/my-friends/my-friends.component.scss
@@ -35,7 +35,7 @@ ion-img {
 }
 
 .friendshipList {
-  background: var(--ion-item-background) !important;
+  background: rgb(36, 35, 45) !important;
   --color: white;
 
   ion-item {
